<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="listo_para_hacer_un_envío">¿Listo para hacer un envío?</string>
    <string name="punto_a">Punto A</string>
    <string name="dirección_de_recogida">Dirección de recogida</string>
    <string name="dirección_de_entrega">Dirección de entrega</string>

    <string name="welcome_how_can_i_help_you">Bienvenido Mario, ¿Cómo puedo ayudarte?</string>

    <string name="name">Nombre</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="already_a_member_login">¿Ya tienes una cuenta? Iniciar sesión</string>

    <string name="login">Acceder</string>
    <string name="no_account_yet_create_one">¿Sin cuenta? Crear una ahora</string>


    <string name="app_name">Encomiendas SV</string>
    <string name="hello_world">Hello world!</string>
	
	
	
	
	
	<string name="enviar_un_pedido">Enviar un pedido</string>
	<string name="enviar_un_pedido_descripcion">Enviar algo</string>
</resources>
