<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingLeft="24dp"
		android:paddingRight="24dp"
		android:gravity="center">

		<ImageView
			android:src="@drawable/logo_light"
			android:layout_width="wrap_content"
			android:layout_height="72dp"
			android:layout_marginBottom="24dp"
			android:layout_gravity="center_horizontal"/>

			<EditText
				android:id="@+id/input_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:hint="@string/email"/>



			<EditText
				android:id="@+id/input_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:hint="@string/password"
				/>


		<android.support.v7.widget.AppCompatButton
			android:id="@+id/btn_login"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp"
			android:layout_marginBottom="24dp"
			android:backgroundTint="@color/ok_buttons"
			android:padding="12dp"
			android:textColor="#ffffff"
			android:text="@string/login"/>

		<TextView
			android:id="@+id/link_signup"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="24dp"
			android:text="@string/no_account_yet_create_one"
			android:gravity="center"
			android:textSize="16dip"
			android:textColor="@color/link"/>
	</LinearLayout>


