<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<FrameLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="0.8">

		<com.google.android.gms.maps.MapView
			android:id="@+id/map_view"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

		</com.google.android.gms.maps.MapView>

		<TextView
			android:id="@+id/mandaditos_distance"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Distancia en kilometros"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_gravity="bottom|center"
			android:elevation="2dp"
			android:background="#8C000000"
			style="@style/title"
			android:padding="8dp"
			android:textColor="#FFFFFF"/>

	</FrameLayout>

	<LinearLayout
		android:layout_weight="1.4"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/listo_para_hacer_un_envío"
					style="@style/title"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/punto_a"
					style="@style/info"
					android:layout_marginBottom="8dp"/>

				<TextView
					android:editable="false"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="16dp"
					android:hint="@string/dirección_de_recogida"
					style="@style/rounded_edittext"
					android:id="@+id/ed1"/>

				<TextView
					android:editable="false"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:hint="@string/dirección_de_entrega"
					style="@style/rounded_edittext"
					android:id="@+id/ed2"/>

				<Button
					android:layout_height="wrap_content"
					android:text="Siguiente"
					android:layout_gravity="bottom|center"
					android:background="@drawable/rounded_button_soft"
					android:textColor="#FFFFFF"
					android:layout_width="match_parent"
					android:layout_margin="16dp"
					android:id="@+id/mandaditosmainCheckoutButton"/>

			</LinearLayout>

		</ScrollView>

	</LinearLayout>

</LinearLayout>

